--- a/docs/getting-started/launch-local-node.mdx
+++ b/docs/getting-started/launch-local-node.mdx
@@ -3,13 +3,23 @@ sidebar_position: 5
 id: launch-local-node
 ---
 
+
 # Launching Local Node
 
 This section explains launching a local node by starting up the `nodeop` and `kiod` services.
 
+:::warning
+It is important to note that the setup described below launches a _**simplified single-node chain**_ , NOT a full-scale Wire blockchain environment. 
+This minimal local single-node chain lacks deployed system contracts and the numerous complexities of a live chain, such as resource management, contract policies, protocol features, etc. 
+This streamlined setup is perfect for local development and getting familiar with the `clio` CLI; it provides a straightforward, easily manageable environment to begin developing smart contracts.
+
+Once local development environment is set up, you can progress to [Smart Contracts Development: Hello World](/docs/smart-contract-development/hello-world-contract) where you will build and deploy your first contract.
+:::
+
+
 ## Prerequisites
 
-- You have successfully installed Wire Sysio and Wire CDT on your computer **without** using the `wire-cli` automation script. The steps below are only relevant if you followed the [Binary Installation](./install-dependencies.md#binary-installation) instructions.
+- You have successfully installed Wire Sysio and Wire CDT on your computer. See [Binary Installation](./install-dependencies.md#binary-installation) instructions.
 
 ## Starting `kiod`
 
