fixed broken links & build error
fixed action step

--- a/docs/getting-started/launch-local-node.mdx
+++ b/docs/getting-started/launch-local-node.mdx
@@ -13,7 +13,7 @@ It is important to note that the setup described below launches a _**simplified 
 This minimal local single-node chain lacks deployed system contracts and the numerous complexities of a live chain, such as resource management, contract policies, protocol features, etc. 
 This streamlined setup is perfect for local development and getting familiar with the `clio` CLI; it provides a straightforward, easily manageable environment to begin developing smart contracts.
 
-Once local development environment is set up, you can progress to [Smart Contracts Development: Hello World](/docs/smart-contract-development/hello-world-contract) where you will build and deploy your first contract.
+Once local development environment is set up, you can progress to [Smart Contracts Development: Hello World](../smart-contract-development/hello-world-contract-short.md) where you will build and deploy your first contract.
 :::
 
 
