wire-cli installation instructions

--- a/src/drafts/launch-local-node.mdx
+++ b/src/drafts/launch-local-node.mdx
@@ -19,7 +19,7 @@ Once local development environment is set up, you can progress to [Smart Contrac
 
 ## Prerequisites
 
-- You have successfully installed Wire Sysio and Wire CDT on your computer. See [Binary Installation](./install-dependencies.md#binary-installation) instructions.
+- You have successfully installed Wire Sysio and Wire CDT on your computer. See [Install Dependencies](./install-dependencies.md).
 
 ## Starting `kiod`
 
