--- a/docs/guides/hello-world-video-testnet.mdx
+++ b/docs/guides/hello-world-video-testnet.mdx
@@ -19,10 +19,10 @@ import IFrameWindow from '@site/src/components/IFrameWindow';
 ## Steps 
 ### 1. Connect to the Wire Hub & Create Your Wire Testnet Account
 
-- **Open [Wire Hub](https://hub.wire.network)** in your browser.  
+- **Open [Wire Hub](https://explore.wire.foundation)** in your browser.  
 - **Connect your wallet** (e.g., MetaMask).  
    - Once connected, the Hub should display your account’s public address.  
-- **Create your on-chain account** in the [Wire Testnet Explorer](https://hub.wire.network/explore):  
+- **Create your on-chain account** in the [Wire Testnet Explorer](https://explore.wire.foundation//explore):  
    - You’ll be prompted to **sign a message** in MetaMask to retrieve your public key.  
    - After signing, the system creates a new user account associated with that public key.
 
@@ -31,12 +31,12 @@ import IFrameWindow from '@site/src/components/IFrameWindow';
 
 ### 2. Request a Developer Contract Policy
 
-- **Open the [Node Owner Dashboard](https://hub.wire.network/explore/node-owner)**.  
+- **Open the [Node Owner Dashboard](https://explore.wire.foundation//explore/node-owner)**.  
 - **Request `Developer Contract Policy`** for a new contract account:  
    - Randomly generated usernames and keys are displayed. You can shuffle them if you want.  
    - **Save these credentials** in a secure place — this account will be the contract account you will deploy your contract to.
 
-- Confirm the new contract policy was created. In the [Wire Hub](https://hub.wire.network) or [Explorer](https://hub.wire.network/explore), you should see:
+- Confirm the new contract policy was created. In the [Wire Hub](https://explore.wire.foundation) or [Explorer](https://explore.wire.foundation//explore), you should see:
    - **Account Type**: `Contract Account`
    - **Public Keys**: Matching the the public key you just saved.
 
@@ -56,13 +56,13 @@ git clone https://github.com/Wire-Network/guides.git && cd guides/hello-world-co
 Ensure your wallet is unlocked: 
 
 ```sh 
-clio wallet unlock --name=default --password "$(cat /path/to/wallet-password.txt)"
+sudo clio wallet unlock --name=default --password "$(cat /path/to/wallet-password.txt)"
 ```
 
 Then, import the key pair generated in [Step 2](#2-request-a-developer-contract-policy):
 
 ```sh
-clio wallet import --private-key <YOUR_PRIVATE_KEY>
+sudo clio wallet import --private-key <YOUR_PRIVATE_KEY>
 ```
 
 
@@ -101,7 +101,7 @@ Don't forget adding the `-u` to the deploy script. The video was recorded on a s
 :::
 
 ```sh title="deploy.sh"
-clio -u https://testnet-00.wire.foundation set contract contractAccount ./hello -p contractAccount@active
+sudo clio -u https://testnet-00.wire.foundation set contract contractAccount ./hello -p contractAccount@active
 ```
 
 See more information about `clio set contract` [here](/docs/api-reference/tooling/clio/command-reference/set/set-contract).
@@ -113,14 +113,14 @@ Run the deploy script:
 ```
 If successful, you’ll see a transaction receipt indicating “executed success”.
 
-- In the [Wire Hub](https://hub.wire.network) or [Explorer](https://hub.wire.network/explore), navigate to the *Accounts* -> *Contract Accounts* list. You should see your new contract.
+- In the [Wire Hub](https://explore.wire.foundation) or [Explorer](https://explore.wire.foundation//explore), navigate to the *Accounts* -> *Contract Accounts* list. You should see your new contract.
 - You can then inspect tables and actions under the *Contract* tab on the contract’s account page.
 
 #### Testing the `hi()` Action from the Wire Hub
 
 The Hello World contract includes a single action called `hi()`, which logs a greeting in the console.
 
-- In the [Wire Hub](https://hub.wire.network), open the *Contract* Tab for your contract’s account.
+- In the [Wire Hub](https://explore.wire.foundation), open the *Contract* Tab for your contract’s account.
 - You’ll see *Actions* listed (in this case, just `hi`) and parameters field.
 - To invoke the action, enter a username(e.g. `bob`) and click Submit.
 - The Hub displays a receipt upon success, and you can view the console log output:
@@ -139,7 +139,7 @@ Hello, bob
    Let's attempt to push an action with your personal authority (Fails)
 
    ```sh
-   clio -u https://testnet-00.wire.foundation push action <contractAccount> hi '["bob"]' -p <yourWireUsername>@active
+   sudo clio -u https://testnet-00.wire.foundation push action <contractAccount> hi '["bob"]' -p <yourWireUsername>@active
    ```
 
    It will fail because you haven’t imported your personal account’s private key into your local clio wallet.
@@ -156,7 +156,7 @@ Hello, bob
    Run the command again, but use the contract policy account authority:
 
    ```sh
-   clio -u https://testnet-00.wire.foundation push action <contractAccount> hi '["bob"]' -p <contractAccount>@active
+   sudo clio -u https://testnet-00.wire.foundation push action <contractAccount> hi '["bob"]' -p <contractAccount>@active
    ```
 
    Ouput:
