removed old cmd for deploy + old installation prerequisites

--- a/docs/guides/hello-world-video-testnet.mdx
+++ b/docs/guides/hello-world-video-testnet.mdx
@@ -109,7 +109,7 @@ See more information about `clio set contract` [here](/docs/api-reference/toolin
 Run the deploy script:
 
 ```sh
-./deploy.sh
+sudo ./deploy.sh
 ```
 If successful, you’ll see a transaction receipt indicating “executed success”.
 
