replacing versions & updating command notes

--- a/docs/guides/hello-world-video-testnet.mdx
+++ b/docs/guides/hello-world-video-testnet.mdx
@@ -10,6 +10,9 @@ This tutorial demonstrates how to deploy a simple `hello-world` smart contract o
 - Before proceeding forward, ensure that **you have completed Getting Started section** and that you have followed [Getting Started Documentation Diagram](/docs/getting-started/getting-started-intro.md).
 - This page assumes you are familiar with [Smart Contract Basics](/docs/smart-contract-development/smart-contract-basics).
 
+:::warning[NOTE]
+The wallet is configured for the `root` user, so all `clio` commands in this tutorial are prefixed with *sudo*.
+:::
 
 import IFrameWindow from '@site/src/components/IFrameWindow';
 
