--- a/docs/guides/hello-world-video-testnet.mdx
+++ b/docs/guides/hello-world-video-testnet.mdx
@@ -25,7 +25,7 @@ import IFrameWindow from '@site/src/components/IFrameWindow';
 - **Open [Wire Hub](https://explore.wire.foundation)** in your browser.  
 - **Connect your wallet** (e.g., MetaMask).  
    - Once connected, the Hub should display your account’s public address.  
-- **Create your on-chain account** in the [Wire Testnet Explorer](https://explore.wire.foundation//explore):  
+- **Create your on-chain account** in the [Wire Testnet Explorer](https://explore.wire.foundation/explore):  
    - You’ll be prompted to **sign a message** in MetaMask to retrieve your public key.  
    - After signing, the system creates a new user account associated with that public key.
 
@@ -34,12 +34,12 @@ import IFrameWindow from '@site/src/components/IFrameWindow';
 
 ### 2. Request a Developer Contract Policy
 
-- **Open the [Node Owner Dashboard](https://explore.wire.foundation//explore/node-owner)**.  
+- **Open the [Node Owner Dashboard](https://explore.wire.foundation/explore/node-owner)**.  
 - **Request `Developer Contract Policy`** for a new contract account:  
    - Randomly generated usernames and keys are displayed. You can shuffle them if you want.  
    - **Save these credentials** in a secure place — this account will be the contract account you will deploy your contract to.
 
-- Confirm the new contract policy was created. In the [Wire Hub](https://explore.wire.foundation) or [Explorer](https://explore.wire.foundation//explore), you should see:
+- Confirm the new contract policy was created. In the [Wire Hub](https://explore.wire.foundation) or [Explorer](https://explore.wire.foundation/explore), you should see:
    - **Account Type**: `Contract Account`
    - **Public Keys**: Matching the the public key you just saved.
 
@@ -116,7 +116,7 @@ sudo ./deploy.sh
 ```
 If successful, you’ll see a transaction receipt indicating “executed success”.
 
-- In the [Wire Hub](https://explore.wire.foundation) or [Explorer](https://explore.wire.foundation//explore), navigate to the *Accounts* -> *Contract Accounts* list. You should see your new contract.
+- In the [Wire Hub](https://explore.wire.foundation) or [Explorer](https://explore.wire.foundation/explore), navigate to the *Accounts* -> *Contract Accounts* list. You should see your new contract.
 - You can then inspect tables and actions under the *Contract* tab on the contract’s account page.
 
 #### Testing the `hi()` Action from the Wire Hub
